fixed bug where filter details jumped on drag and drop, fixed margins and padding of filter panes

--- a/app/styles/_filters.scss
+++ b/app/styles/_filters.scss
@@ -107,3 +107,10 @@
   margin: 10px;
 }
 
+/* -------------------------------- FILTER ITEM -------------------------------- */
+
+.filter-item {
+  .form-group {
+    margin: 0 0 0 -15px;
+  }
+}
