--- a/app/styles/_panes.scss
+++ b/app/styles/_panes.scss
@@ -20,6 +20,7 @@
   }
 
   .pane-content {
+    min-height: 100px;
     border: 8px solid $body-bg;
     padding-left: 20px;
 
